Add image list demo to sandbox

--- a/sandbox/app/views/editor/standalone.html.erb
+++ b/sandbox/app/views/editor/standalone.html.erb
@@ -11,6 +11,7 @@
 <script type="text/javascript" charset="utf-8">
   tinyMCE.init({
     mode: 'textareas',
-    theme: 'advanced'
+    theme: 'advanced',
+    external_image_list_url: '/assets/image-list.js'
   });
 </script>
